Minor changed + Backend to Java 17